Almost done with the logic of Typing test

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Typing Speed Test</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
       <div id="typing-area">
         <p id="sentence"></p>
         <input type="text" id="input" disabled />
-        <textarea name="" id="text" cols="30" rows="10"></textarea>
+
         <button id="start-btn">Start Test</button>
         <p id="timer"></p>
       </div>
